--- a/ui/css/editor.css
+++ b/ui/css/editor.css
@@ -68,10 +68,11 @@ nav .show:checked ~ .menu {
 }
 
 nav .login {
-    background: #fff;
+    color: white;
     border-radius: 5px;
-    padding: 0.3em 0.9em;
-    float: right;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
+    float: left;
     height: 100%;
     margin: 0;
     display: flex;
@@ -81,7 +82,7 @@ nav .login {
 nav .login img {
     max-height: 100%;
     border-radius: 50%;
-    margin-left: 1em;
+    margin-right: 0.5em;
 }
 
 
