--- a/ui/css/editor.css
+++ b/ui/css/editor.css
@@ -401,6 +401,8 @@ button{
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 15px;
+    margin-bottom: 35px;
+    margin-top: 10px;
 }
 
 .ImageModalOption:hover img {
@@ -411,6 +413,30 @@ button{
     display: flex;
     justify-content: center;
     align-items: baseline;
+    text-align: center;
+}
+
+.ImageSelectButton {
+    position: absolute;
+    background-color: #1B173D !important;
+    left: 0;
+    bottom: 0;
+    border-radius: 0;
+    border-bottom-left-radius: 14px;
+    width: 148px;
+    text-align: left;
+    padding-left: 20px;
+}
+
+.ImageHelpIconContainer{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 40px;
+    height: 37px;
+    background: #E71D64;
+    text-align: center;
+    border-bottom-right-radius: 14px;
 }
 
 .button-green {
@@ -419,11 +445,11 @@ button{
 
 
 .ImageModalOption button {
-    margin-bottom: 8px;
+    height: 37px;
 }
 
 .ImageModalOption .icon-help-circled {
-    margin-left: 5px;
+    margin-left: 7px;
 }
 
 /* `TrinketView` Component
