--- a/ui/css/editor.css
+++ b/ui/css/editor.css
@@ -15,6 +15,28 @@ body {
     fill: white;
 }
 
+ progress {
+	background-color: #b5b5b5;
+	border: 0;
+	width: 100%;
+	height: 18px;
+	border-radius: 9px;
+}
+ progress::-webkit-progress-bar {
+	background-color: #b5b5b5;
+    border-radius: 9px;
+}
+ progress::-webkit-progress-value {
+	background: #E71D64;
+	border-radius: 9px;
+}
+.html5-progress-bar progress::-moz-progress-bar {
+	background: #E71D64;
+
+	border-radius: 9px;
+}
+
+
 .blocklyTreeIconCustom {
     background: none !important;
     font-family: 'Font Awesome\ 5 Free';
