--- a/ui/css/editor.css
+++ b/ui/css/editor.css
@@ -266,10 +266,11 @@ table.primary td {
     font-size: 20px;
     width: 10px !important;
     line-height: 28px;
-    padding: 10px;
     background: #e7e7e7;
-    border-top: solid 1px #000;
-    border-bottom: solid 1px #000;
+}
+
+.show-editor{
+    display: block !important;
 }
 
 #editor {
