--- a/ui/css/editor.css
+++ b/ui/css/editor.css
@@ -671,3 +671,524 @@ iframe > body {
     background: white !important;
 }
 
+.modal_modal-overlay_1Lcbx {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 510;
+    background-color: hsla(215, 100%, 65%, 0.9);
+}
+
+.modal_modal-content_1h3ll.modal_full-screen_FA4cr {
+    position: absolute;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: 'touch';
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: hsla(215, 75%, 95%, 1);
+    margin: 0;
+    border: none;
+    border-radius: 0;
+}
+
+.modal_modal-content_1h3ll {
+    margin: 100px auto;
+    outline: none;
+    border: 4px solid hsla(0, 100%, 100%, 0.25);
+    padding: 0;
+    border-radius: 0.5rem;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: hsla(225, 15%, 40%, 1);
+    overflow: hidden;
+}
+
+a.fill-div {
+    display: block;
+    height: 100%;
+    width: 100%;
+    text-decoration: none;
+}
+
+.modal_modal-content_1h3ll * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.modal_modal-content_1h3ll.modal_full-screen_FA4cr {
+    position: absolute;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: 'touch';
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: hsla(215, 75%, 95%, 1);
+    margin: 0;
+    border: none;
+    border-radius: 0;
+}
+
+.modal_modal-content_1h3ll {
+    margin: 100px auto;
+    outline: none;
+    border: 4px solid hsla(0, 100%, 100%, 0.25);
+    padding: 0;
+    border-radius: 0.5rem;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: hsla(225, 15%, 40%, 1);
+    overflow: hidden;
+}
+
+.modal_modal-content_1h3ll.modal_full-screen_FA4cr {
+    position: absolute;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    height: 100%;
+    width: 100%;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: 'touch';
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: hsla(215, 75%, 95%, 1);
+    margin: 0;
+    border: none;
+    border-radius: 0;
+}
+
+.modal_modal-content_1h3ll {
+    margin: 100px auto;
+    outline: none;
+    border: 4px solid hsla(0, 100%, 100%, 0.25);
+    padding: 0;
+    border-radius: 0.5rem;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: hsla(225, 15%, 40%, 1);
+    overflow: hidden;
+}
+
+.library_library-scroll-grid_1jyXm {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    background: hsla(215, 75%, 95%, 1);
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    overflow-y: auto;
+    height: auto;
+    padding: 0.5rem;
+    height: calc(100% - 3.125rem);
+}
+
+.modal_modal-content_1h3ll * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.modal_full-screen_FA4cr [dir="ltr"] .modal_header-item-title_tLOU5 {
+    margin: 0 0 0 -20rem;
+}
+
+[dir="ltr"] .modal_header-item-title_tLOU5 {
+    margin: 0 -20rem 0 0;
+}
+
+.modal_header-item-title_tLOU5 {
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -webkit-flex-shrink: 0;
+    -ms-flex-negative: 0;
+    flex-shrink: 0;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    letter-spacing: 0.4px;
+    cursor: default;
+}
+
+.modal_header-item_2zQTd {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 1rem;
+    text-decoration: none;
+    color: hsla(0, 100%, 100%, 1);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.modal_modal-content_1h3ll * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.modal_full-screen_FA4cr .modal_header-item-close_2XDeL {
+    -webkit-box-ordinal-group: 0;
+    -webkit-order: -1;
+    -ms-flex-order: -1;
+    order: -1;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+}
+
+.modal_header-item-close_2XDeL {
+    -webkit-flex-basis: 20rem;
+    -ms-flex-preferred-size: 20rem;
+    flex-basis: 20rem;
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+    -ms-flex-pack: end;
+    justify-content: flex-end;
+    z-index: 1;
+}
+
+.modal_header-item_2zQTd {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 1rem;
+    text-decoration: none;
+    color: hsla(0, 100%, 100%, 1);
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.modal_modal-content_1h3ll * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.modal_back-button_2ej6v {
+    font-weight: normal;
+    padding-right: 0;
+    padding-left: 0;
+}
+
+.modal_modal-content_1h3ll * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.button_outlined-button_1bS__ {
+    cursor: pointer;
+    border-radius: calc(0.5rem / 2);
+    font-weight: bold;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding-left: .75rem;
+    padding-right: .75rem;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.button_content_3jdgj {
+    white-space: nowrap;
+}
+
+.modal_header_1h7ps {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-flex-wrap: nowrap;
+    -ms-flex-wrap: nowrap;
+    flex-wrap: nowrap;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    height: 3.125rem;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100%;
+    background-color: #1b173d;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1rem;
+    font-weight: normal;
+}
+
+library-item_featured-item_3V2-t {
+    -webkit-flex-basis: 300px;
+    -ms-flex-preferred-size: 300px;
+    flex-basis: 300px;
+    max-width: 300px;
+    height: auto;
+    overflow: hidden;
+    padding: 0;
+}
+
+.library-item_library-item-extension_3xus9 {
+    -webkit-align-self: stretch;
+    -ms-flex-item-align: stretch;
+    align-self: stretch;
+}
+
+.library-item_library-item_1DcMO {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-flex-basis: 160px;
+    -ms-flex-preferred-size: 160px;
+    flex-basis: 160px;
+    position: relative;
+    height: 160px;
+    max-width: 160px;
+    margin: 0.5rem;
+    padding: 1rem 1rem 0 1rem;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    color: hsla(225, 15%, 40%, 1);
+    background: white;
+    border-width: 2px;
+    border-style: solid;
+    border-color: hsla(0, 0%, 0%, 0.15);
+    border-radius: 0.5rem;
+    text-align: center;
+    cursor: pointer;
+}
+
+library-item_library-item_1DcMO:hover{
+    border: #1B173D;
+}
+
+.library-item_featured-image-container_1KIHG {
+    position: relative;
+}
+
+.modal_modal-content_1h3ll * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.library-item_featured-image_2gwZ6 {
+    width: 100%;
+}
+
+[dir="ltr"] .library-item_library-item-inset-image-container_3PLJ1 {
+    margin-left: 1rem;
+}
+
+.library-item_library-item-inset-image-container_3PLJ1 {
+    position: relative;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    margin-top: -2.5rem;
+    -webkit-align-self: flex-start;
+    -ms-flex-item-align: start;
+    align-self: flex-start;
+    background-color: white;
+    width: 3.5rem;
+    height: 3.5rem;
+    border-radius: 0.5rem;
+    border: 0.25rem solid hsla(0, 0%, 0%, 0.15);
+}
+
+.ReactModal__Overlay{
+    z-index: 20000;
+}
+
+.modal_modal-content_1h3ll * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+[dir="ltr"] .library-item_featured-extension-text_22A1k {
+    text-align: left;
+    padding-left: 1.25rem;
+}
+
+.library-item_featured-text_2KFel {
+    font-weight: bold;
+    padding: 10px;
+    /* height: 140px; */
+    width: 300px;
+}
+
+.modal_modal-content_1h3ll * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
+.library_library-scroll-grid_1jyXm {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -webkit-align-content: flex-start;
+    -ms-flex-line-pack: start;
+    align-content: flex-start;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    background: hsla(215, 75%, 95%, 1);
+    -webkit-box-flex: 1;
+    -webkit-flex-grow: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    overflow-y: auto;
+    height: auto;
+    padding: 0.5rem;
+    height: calc(100% - 3.125rem);
+}
+
+.modal_modal-content_1h3ll * {
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.library-item_featured-item_3V2-t {
+    -webkit-flex-basis: 300px;
+    -ms-flex-preferred-size: 300px;
+    flex-basis: 300px;
+    max-width: 300px;
+    height: auto;
+    overflow: hidden;
+    padding: 0;
+}
+
+.library-item_featured-extension-metadata-detail_1M9BV {
+    height: 100%;
+    padding-top: 0.4rem;
+    font-weight: bold;
+}
+
+.library-item_featured-extension-collaboration_2dGS9 {
+    width: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
+
+.library-item_featured-extension-metadata-detail_1M9BV {
+    height: 100%;
+    padding-top: 0.4rem;
+    font-weight: bold;
+}
+
