--- a/ui/css/editor.css
+++ b/ui/css/editor.css
@@ -101,9 +101,10 @@ nav .login {
     align-items: center;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1408px) {
     #filename{
-        display: none !important;
+        float: left !important;
+        width: 100% !important;
     }
 }
 
