--- a/ui/fonts/icons/css/fontello-codes.css
+++ b/ui/fonts/icons/css/fontello-codes.css
@@ -12,3 +12,4 @@
 .icon-book:before { content: '\e80a'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
 .icon-puzzle:before { content: '\f12e'; } /* '' */
+.icon-share:before { content: '\f1e0'; } /* '' */
