--- a/ui/fonts/icons/css/fontello.css
+++ b/ui/fonts/icons/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?7904163');
-  src: url('../font/fontello.eot?7904163#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?7904163') format('woff2'),
-       url('../font/fontello.woff?7904163') format('woff'),
-       url('../font/fontello.ttf?7904163') format('truetype'),
-       url('../font/fontello.svg?7904163#fontello') format('svg');
+  src: url('../font/fontello.eot?20222843');
+  src: url('../font/fontello.eot?20222843#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?20222843') format('woff2'),
+       url('../font/fontello.woff?20222843') format('woff'),
+       url('../font/fontello.ttf?20222843') format('truetype'),
+       url('../font/fontello.svg?20222843#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?7904163#fontello') format('svg');
+    src: url('../font/fontello.svg?20222843#fontello') format('svg');
   }
 }
 */
@@ -24,7 +24,7 @@
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
-  speak: none;
+  speak: never;
  
   display: inline-block;
   text-decoration: inherit;
@@ -68,3 +68,4 @@
 .icon-book:before { content: '\e80a'; } /* '' */
 .icon-menu:before { content: '\f0c9'; } /* '' */
 .icon-puzzle:before { content: '\f12e'; } /* '' */
+.icon-share:before { content: '\f1e0'; } /* '' */
